# FastAPI-userservice-backend

./: .gitignore  Dockerfile  Dockerfile.test  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
userservice/: app.py  main.py  models.py  test_api.py
userservice/routes/: generic_routes.py  user_routes.py
