[tool.poetry]
name = "backend_recruitment_assignment-master"
version = "0.1.0"
description = ""
authors = ["Mohammed Salman <m.salman@zinkki.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
motor = "^2.4.0"
fastapi = "^0.66.0"
beanie = "^1.2.4"
uvicorn = "^0.14.0"
email-validator = "^1.1.3"


[tool.poetry.dev-dependencies]
requests = "^2.26.0"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.2"
factory-boy = "^3.2.0"
pytest-cov = "^2.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
